# HISPA-LENGUAJE

./: .sconsign.dblite  CMakeLists.txt  LICENSE  Makefile  README.md  Readme.md  example.his  hispa  hola.txt
inc/: lexer.h  utils.h
src/: ir.c  lexer.c  main.c  parser.c  semantic.c  types.c  utils.c
